<resources>
    <string name="app_name">Poll Vote</string>
    <string name="default_notification_channel_id">pollvote_channel</string>
    <string name="API_KEY">AIzaSyAsN49ewKxfYgh52vDwwprXWaqVmIJMZic</string>

    <!--    Login -->
    <string name="poll_vote">Poll Vote</string>
    <string name="sign_in_continue">Sign in to continue</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="signin">SignIn</string>
    <string name="remember_me">Remember Me</string>

    <!--    SignUp-->
    <string name="registration">Registration</string>
    <string name="voter">Voter</string>
    <string name="fill_your_detail_below">Fill Your Detail Below</string>
    <string name="user_name">Full Name</string>
    <string name="enter_full_name">Please enter full name</string>

    <string name="driving_licence">Driving Licence Number</string>
    <string name="voter_id">Voter Id</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="continue_k">Continue</string>

    <!--    OTP-->
    <string name="mobile_verification">Mobile Verification</string>
    <string name="code">Code</string>
    <string name="otp_sent_on_email">Enter the 6 digit code we sent to your mobile number or email address</string>
    <string name="code_expires_in">Code will expire in</string>
    <string name="didnt_get_code">Didn\'t Get Code?</string>
    <string name="resend_code">Resend Code</string>
    <string name="please_enter_six_digit">Please Enter 6 digit OTP</string>
    <string name="your_number_verified">Your number has been verified</string>
    <string name="otp_resent">Otp resent on your device</string>
    <string name="otp_expired">OTP Expired, Please Resend!</string>
    <string name="seconds">seconds</string>

    <!--    Address-->
    <string name="select_gender_sp">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="address">Address</string>
    <string name="village_city">Town/City</string>
    <string name="district">County</string>
    <string name="state">Province</string>
    <string name="zipcode">Zip Code</string>
    <string name="gender">Gender</string>
    <string name="select_province">Select Province</string>
    <string name="select_county_sp">Select County</string>

    <string name="enter_address">Please enter address</string>
    <string name="enter_city_town">Please enter city/town</string>
    <string name="select_county">Please select county</string>
    <string name="select_state">Please select province</string>
    <string name="select_dob">Please select DOB</string>
    <string name="enter_zip_code">Please enter zip code</string>
    <string name="select_gender">Please select gender</string>

    <!--    Documents-->
    <string name="preview">Preview</string>
    <string name="upload_documents">Upload <b>Documents</b></string>
    <string name="document_content">Share your valid Documents for voting</string>
    <string name="finish">Finish</string>
    <string name="skip_verification">Skip Verification</string>
    <string name="delete">Delete Document!</string>
    <string name="delete_message">Do you want to delete document?</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="dob">DOB</string>
    <string name="fill_your_detail_blow">Fill Your Detail Blow</string>
    <string name="forgot_password">Forgot Password</string>

    <string name="poll">Poll</string>
    <string name="vote">Vote</string>

    <string name="enter_first_name">Please enter name</string>
    <string name="enter_driving_lic">Please enter driving licence</string>

    <string name="enter_mobile">Please enter mobile number</string>
    <string name="enter_valid_mobile">Please enter valid mobile number</string>

    <string name="enter_email">Please enter email</string>
    <string name="enter_valid_email">Please enter valid email</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_password_length">Please enter password minimum 8 character</string>
    <string name="imag_not_found">We couldn\'t find your\nimage in our database.</string>
    <string name="password_policy">Password should be minimum 8 characters long, should contain at least one capital letter, one small letter, one number and one special character</string>

<!--Event -->

    <string name="enter_voter_id">Please enter voter-id</string>
    <string name="enter_valid_voter_id">Your Voter id is invalid</string>


    <string name="dummy_address">#330, Sector 10, Mohali</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="events">Events</string>
    <string name="dummy_event_title">Mayoral elections for the Assembly of the provision</string>
    <string name="dummy_date">20 Dec 2021</string>
    <string name="dummy_event_address">Morristown, New Jersey</string>
    <string name="event_detail">Event Detail</string>
    <string name="start_time">Start Time</string>
    <string name="stop_time">Stop Time</string>
    <string name="dummy_event_time">00:00:00</string>
    <string name="current_time_in_hrs">current time (in hrs)</string>
    <string name="current_time_in_days">current time (in days)</string>

    <string name="validate_me">Validate Me</string>
    <string name="please_visit_voting_center">For any query please visit voting center</string>
    <string name="cast_your_vote">Cast Your Vote</string>
    <string name="go_vote">Go Vote</string>
    <string name="voting_now_open">Voting Now Open</string>
    <string name="enter_your_voter_id">To Cast your Vote kindly re-enter your Voter-Id</string>
    <string name="enter_your_id">Enter Your id</string>
    <string name="confirm_vote">Confirm Vote</string>
    <string name="select_one_candidate">Please select atleast one candidate</string>
    <string name="time_left_to_stop_polling">Time left to stop polling</string>


    <!--User Profile-->
    <string name="change_mobile_number">Change Mobile Number</string>
    <string name="enter_new_mobile_number">Enter New Mobile Number</string>
    <string name="please_enter_mobile_number">Please Enter mobile number</string>
    <string name="continue_btn">Continue</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>

    <string name="please_enter_old_password">Please Enter Old Password</string>
    <string name="please_enter_new_password">Please Enter new Password</string>
    <string name="please_enter_confirm_password">Please Enter Confirm Password</string>

    <string name="new_confirm_password_not_matched">New and confirm password are not matched!</string>
    <string name="please_enter_city">Please Enter City/Town</string>
    <string name="please_enter_dob">Please Enter DOB</string>
    <string name="welcome_to_the_fastest_way_to">Welcome, to the fastest way to</string>
    <string name="just_vote">Just Vote!</string>
    <string name="setup">Setup</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>

    <string name="change_personal_detail">Change Personal Detail</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <!--Dialog messages-->


    <string name="sorry_already_cast">You have already cast your vote.</string>
    <string name="document_upload">Your documents are pending. Please Upload!</string>
    <string name="oops_time_up">Oops!!\n\nTime\'s is over. You can\'t cast your vote.</string>
    <string name="no_internet_connection">No Internet! \n\nPlease check your internet connection.</string>
    <string name="delete_">Delete</string>
    <string name="nearby_booths">Nearby Booths</string>
    <string name="add_new_password">Add New Password</string>
    <string name="code_will_expire_in">Code Will Expire in</string>
    <string name="_00_40">00:40</string>
    <string name="didn_t_get_code">Didn\'t Get Code?</string>
    <string name="time_left_to_start_polling">Time left to start polling</string>
    <string name="time_left">Time left</string>
    <string name="current_time_in_hr">current time(in hrs)</string>
    <string name="id">ID-</string>
    <string name="enter_register_mobile">Enter Register Mobile</string>
    <string name="dummy_seconds">00:43 seconds</string>
    <string name="last_name">Last Name</string>
    <string name="we_couldn_t_find_you_in_our_database_please_check_the_entered_details">We couldn\'t find you in our database. Please check the entered details.</string>
    <string name="upload_by">Upload By</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="filter_by">Filter By</string>
    <string name="do_you_want_to_logout">Do you want to logout!</string>
    <string name="retry">Retry</string>

    <string name="todo">TODO</string>
    <string name="secretary">Secretary</string>
    <string name="democratic_party">Democratic Party</string>
    <string name="asiyah_flower">Asiyah Flower</string>
    <string name="republican_party">Republican Party</string>
    <string name="tarun_bowman">Tarun Bowman</string>
    <string name="head_cleark">Head Cleark</string>
    <string name="mayoral_elections_for_the_assembly_of_the_provision">Mayoral elections for the Assembly of the provision</string>
    <string name="_20_dec_2021">20 Dec 2021</string>
    <string name="morristown_new_jersey">Morristown, New Jersey</string>
    <string name="identity_pdf">identity.pdf</string>
    <string name="thank_you">Thank You</string>
    <string name="your_vote_successfully_polled">Your vote successfully Polled</string>
    <string name="ok">OK</string>
    <string name="to_cast_your_vote_kindly_re_enter_your_voter_id">To Cast your Vote kindly re-enter your Voter-Id</string>

    <string name="enter_your_mobile_number">Enter your Mobile Number</string>

    <string name="add_number">Add Number</string>
    <string name="you_are_unable_to_do_vote_here_please_go_to_the_nearby_poll_booth">You are Unable to do vote here. please go to the nearby Poll Booth</string>
    <string name="find_nearby_polling_booth">Find Nearby Polling Booth</string>


</resources>