<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@mipmap/bg"
    android:orientation="vertical"
    android:padding="30dp">

    <ImageView
        tools:ignore="ContentDescription"
        android:id="@+id/img_tyre"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@mipmap/login_ok" />

    <com.pollvote.utils.customView.CustomTVRobbotBold
        android:id="@+id/txt_minty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_tyre"
        android:layout_marginTop="10dp"
        android:includeFontPadding="false"
        android:text="@string/poll_vote"
        android:textColor="@color/color_black"
        android:textSize="25sp" />

    <com.pollvote.utils.customView.CustomTVRobbotLite
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_minty"
        android:includeFontPadding="false"
        android:text="@string/forgot_password"
        android:textColor="@color/color_black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/rl_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"

            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="bottom"
                app:hintTextAppearance="@style/TextLabel">


                <com.pollvote.utils.customView.CustomETVPoppinsRegular

                    android:maxLength="14"
                    android:inputType="phone"
                    android:id="@+id/et_user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark_gray"
                    android:hint="@string/enter_register_mobile"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <ImageView
                tools:ignore="ContentDescription"
                android:id="@+id/img_mail_id_correct"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>



        <com.pollvote.utils.customView.CustomButtonRobotoRegular
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_button"
            android:text="@string/continue_btn"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>