<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_cong"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/congratulations"
            tools:ignore="ContentDescription" />

        <com.pollvote.utils.customView.CustomTVRobbotBold
            android:id="@+id/txt_thank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_cong"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/thank_you"
            android:textColor="@color/color_black"
            android:textSize="25sp" />

        <com.pollvote.utils.customView.CustomTVRobbotRegular
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_thank"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/your_vote_successfully_polled"
            android:textColor="@color/color_black"
            android:textSize="20sp" />

        <com.pollvote.utils.customView.CustomButtonRobotoRegular
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/txt_name"
            android:layout_margin="30dp"
            android:background="@drawable/bg_button"
            android:text="@string/continue_btn"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textSize="16sp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>