<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:padding="15dp"
            android:src="@drawable/back_img"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">


            <com.pollvote.utils.customView.CustomTVRobbotBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:includeFontPadding="false"
                android:text="@string/add_new_password"
                android:textColor="@color/color_black"
                android:textSize="25sp" />


            <LinearLayout
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="bottom"
                    app:hintTextAppearance="@style/TextLabel">
                    <com.pollvote.utils.customView.CustomETVPoppinsRegular
                        android:id="@+id/et_old_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/old_password"
                        android:singleLine="true"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    app:passwordToggleEnabled="true"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="bottom"
                    app:passwordToggleDrawable="@drawable/password_toggle"
                    app:hintTextAppearance="@style/TextLabel">
                    <com.pollvote.utils.customView.CustomETVPoppinsRegular
                        android:inputType="textPassword"
                        android:id="@+id/et_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_password"
                        android:singleLine="true"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    app:passwordToggleEnabled="true"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="bottom"
                    app:passwordToggleDrawable="@drawable/password_toggle"
                    app:hintTextAppearance="@style/TextLabel">
                    <com.pollvote.utils.customView.CustomETVPoppinsRegular
                        android:inputType="textPassword"
                        android:id="@+id/et_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:singleLine="true"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>



            </LinearLayout>


            <com.pollvote.utils.customView.CustomButtonRobotoRegular
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/bg_button"
                android:text="@string/continue_btn"
                android:textAllCaps="false"
                android:textColor="@color/color_white"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>